starting project document

--- a/doc/references/references.bib
+++ b/doc/references/references.bib
@@ -55,3 +55,11 @@
     year = {2016},
     note = {R package version 0.3.3}
 }
+@inproceedings{cencov1962estimation,
+  title={Estimation of an unknown density function from observations},
+  author={Cencov, NN},
+  booktitle={Dokl. Akad. Nauk, SSSR},
+  volume={147},
+  pages={45--48},
+  year={1962}
+}
