--- a/doc/main/main.Rmd
+++ b/doc/main/main.Rmd
@@ -8,7 +8,7 @@ date: "Last Update: `r format(Sys.time(), '%d %B, %Y')`"
 output:
   pdf_document:
     toc: true
-    toc_depth: 2
+    toc_depth: 3
     number_sections: true
 bibliography: ../references/references.bib
 header-includes:
@@ -85,7 +85,7 @@ $$
 
 such that the $j = 1, ..., p$ coefficient vectors $\widehat\bbeta^\texttt{SA-hier}_{j} = \left[ \widehat\beta^\texttt{SA-hier}_{j, 1}, ..., \widehat\beta^\texttt{SA-hier}_{j, K} \right] \in \R^K$ are simultaneously estimated by the solution of the minimization problem
 \begin{equation}\label{eqn:HierBasis}
- \left[\widehat\bbeta^\texttt{SA-hier}_1, ..., \widehat\bbeta^\texttt{SA-hier}_p \right] = \underset{\bbeta_1, ..., \bbeta_p}{\argmin} \left\{ \frac{1}{2} \left\lVert yg - \sum^p_{j = 1} \Psi^{(j)}_K \bbeta_j \right\rVert^2_2 + \lambda \sum^p_{j = 1} \Omega_j\left(\beta_j\right) + \frac{\lambda^2}{\sqrt{n}} \sum^p_{j = 1} \left\lVert \Psi^{(j)}_K \bbeta_j \right\rVert_2 \right\},
+ \left[\widehat\bbeta^\texttt{SA-hier}_1, ..., \widehat\bbeta^\texttt{SA-hier}_p \right] = \underset{\bbeta_1, ..., \bbeta_p}{\argmin} \left\{ \frac{1}{2} \left\lVert y - \sum^p_{j = 1} \Psi^{(j)}_K \bbeta_j \right\rVert^2_2 + \lambda \sum^p_{j = 1} \Omega_j\left(\beta_j\right) + \frac{\lambda^2}{\sqrt{n}} \sum^p_{j = 1} \left\lVert \Psi^{(j)}_K \bbeta_j \right\rVert_2 \right\},
 \end{equation}
 
 where
@@ -203,16 +203,369 @@ library(hierbasis2)
 
 ## Comparison with `glmnet`
 
+### Linear Model
+
+We begin with a simple comparison of the `HierBasis` estimators to their lasso counterparts (via `glmnet` @glmnet) in the prediction and variable selection of a simple linear model
+$$
+y_i = {\bm x}_i \bbeta + \epsilon_i, 
+$$
+
+for ${\bm x}_i \sim \mathcal N_p(0, \mathbb I_p)$ and $\epsilon_i \sim \mathcal N(0, \sigma^2)$ such that the noise variance $\sigma^2$ satisfying
+$$
+  \text{SNR} = \frac{1}{\sigma^2(n - 1)} \sum^n_{i = 1} \left({\bm x}_i \bbeta\right)^2,
+$$
+
+for a fixed signal-to-noise ratio $\text{SNR} = 3$. 
+
+```{r}
+#===== parameters =====#
+set.seed(680)
+n <- 2500 # number of observations
+p <- 10 # number of predictors (excluding intercept)
+SPARSE_PCT <- 0.5 # proportion of sparse predictors
+# which predictors are sparse?
+SPARSE_IDX <- sample(2:(p + 1), size = floor(SPARSE_PCT * p)) 
+SNR <- 3 # signal-to-noise ratio (controls noise dispersions)
+beta <- rnorm(p + 1, 0, 10)
+beta[SPARSE_IDX] <- 0
+
+#===== generate data =====#
+X <- matrix(rnorm(n * p), ncol = p) # iid normal deviates
+# compute noiseless response
+ytrue <- cbind(1, X) %*% beta
+# compute noise dispersion satisfying the SNR ratio
+sigma2 <- sum(ytrue^2)/(n - 1) * 1/SNR 
+eps <- rnorm(n, 0, sqrt(sigma2))
+# compute perturbed response
+y <- ytrue + eps
+
+### split data into training and validation sets ###
+X_train <- X[1:(n/2),]
+X_valid <- X[(n/2 + 1):n,]
+y_train <- y[1:(n/2)]
+y_valid <- y[(n/2 + 1):n]
+```
+
+#### Prediction Performance
+
+For both the lasso and `HierBasis` estimators we will perform 10-fold cross-validation to select the tuning parameter $\lambda$. For computational considerations we limit the maximum number of basis elements to $K = \texttt{nbasis} = 10$
+
+```{r}
+#===== fit models =====#
+# lasso
+pt <- proc.time()
+mod.glmnet.cv <- cv.glmnet(x = X_train, y = y_train, alpha = 1)
+proc.time() - pt
+
+# additive hierbasis
+pt <- proc.time()
+mod.ahb.cv <- cv.additivehierbasis(X = X_train, y = y_train)
+proc.time() - pt
+```
+
+Below we present the test-error from the cross-validation procedure plotted against the natural logarithm of the tuning parameter, with the number of active features (`glmnet`) and number of active basis elements (`HierBasis`) printed above the figure.
+```{r, echo = F, fig.align = 'center', fig.height = 4, fig.width = 5}
+plot(mod.glmnet.cv, sub = "glmnet")
+plot(mod.ahb.cv, sub = "HierBasis")
+```
+
+Using the validation sets we may compare the performance of the regression procedures numerically, using both the tuning parameters corresponding to the least testing error, $\lambda_{\text{min}}$, and the one-standard-error rule, $\lambda_{1\text{se}}$.
+```{r}
+### predict validation sets ###
+yhat.glmnet.min <- predict(mod.glmnet.cv, X_valid, s = mod.glmnet.cv$lambda.1se)
+yhat.glmnet.1se <- predict(mod.glmnet.cv, X_valid, s = mod.glmnet.cv$lambda.min)
+yhat.ahb.min <- predict(mod.ahb.cv, X_valid, lam.idx = mod.ahb.cv$lambda.min.idx)
+yhat.ahb.1se <- predict(mod.ahb.cv, X_valid, lam.idx = mod.ahb.cv$lambda.1se.idx)
+
+err.glmnet.min <- yhat.glmnet.min - y_valid
+err.glmnet.1se <- yhat.glmnet.1se - y_valid
+err.ahb.min <- yhat.ahb.min - y_valid
+err.ahb.1se <- yhat.ahb.1se - y_valid
+
+mse.glmnet.min <- mean(err.glmnet.min^2)
+mse.glmnet.min.sd <- sd(err.glmnet.min)
+mse.glmnet.1se <- mean(err.glmnet.1se^2)
+mse.glmnet.1se.sd <- sd(err.glmnet.1se)
+mse.ahb.min <- mean(err.ahb.min^2)
+mse.ahb.min.sd <- sd(err.ahb.min)
+mse.ahb.1se <- mean(err.ahb.1se^2)
+mse.ahb.1se.sd <- sd(err.ahb.1se)
+
+mse <- cbind(
+  c(mse.glmnet.min, mse.glmnet.1se, mse.ahb.min, mse.ahb.1se),
+  c(mse.glmnet.min.sd, mse.glmnet.1se.sd, mse.ahb.min.sd, mse.ahb.1se.sd))
+colnames(mse) <- c("MSE", "MSE.SD")
+rownames(mse) <- c("glmnet.min", "glmnet.1se", "HierBasis.min", "HierBasis.1se")
+round(mse, 2)
+```
+
+We see that for this regression task the `HierBasis` estimator performs comparably to the lasso, at the cost of added computational (and model) complexity. It should be noted that the linear model is not the scenario the additive `HierBasis` estimator was designed for, and so matching performance with the lasso informs us that the `HierBasis` estimator remains capable of handling simpler response-predictor relationships.
+
+#### Variable Selection
+
+Prior to the comparison between the lasso and `HierBasis` estimators' ability to correctly select active features, we explore the properties of the `HierBasis` estimates. First, we investigate the paths the coefficients take as a function of the tuning parameter $\lambda$. For the simulation above we find the following coefficients (with nonzero values corresponding to the active features of $\X$)
+```{r}
+round(beta, 2)
+```
+
+Plotted below are a set of graphs illustrating the coefficient paths (excluding the intercept), with each predictor presented in a separate plot. Plotted above each figure is the number of active hierarchical basis features for the corresponding value of $\lambda$, with the diffrent lines corresponding to the different hierarchical basis features (with $\lambda_{\text{1se}}$ marked by the vertial dotted line)
+```{r, echo = F, fig.align = 'center', fig.height = 3, fig.width = 3.5, fig.show = 'hold'}
+for (j in 1:p) {
+  plot(mod.ahb.cv$model.fit, 
+       pred.idx = j, 
+       plot.type = 'lines', 
+       plot.stat = 'coef')
+  abline(v = mod.ahb.cv$lambda.1se, col = 'gray50', lty = 'dotted')
+  if (beta[j] != 0) {
+    legend("topright", legend = "Active", bty = "n")
+  }
+}
+```
+
+We may also visualize the total number of active features the `HierBasis` estimators detect, where a feature is said to be active if all its basis estimates are estimated to zero. Plotted are the number of active features against the tuning parameter, with the covariate index marked on the $y$ axis.
+```{r, echo = F, fig.align = 'center', fig.height = 4, fig.width = 4.5}
+plot(mod.ahb.cv$model.fit, plot.stat = 'active', legend = T)
+```
+
+To compare the lasso and `HierBasis` estimators we display the estimates of $\bbeta$ in both the cases of the one-standard-error rule tuning parameter $\lambda_{\text{1se}}$.
+```{r}
+betahat.glmnet <- coef(mod.glmnet.cv, s = mod.glmnet.cv$lambda.1se)
+betahat.ahb <- coef(mod.ahb.cv, lam.idx = mod.ahb.cv$lambda.1se.idx)
+
+round(beta, 2)
+round(as.numeric(betahat.glmnet), 2)
+round(betahat.ahb$intercept, 2)
+round(betahat.ahb$X[1:3,], 2)
+```
+
+Once again, we find `HierBasis` to be comparable to the lasso. In this case both estimates correctly select the active features after the application of the one-standard-error rule.
+
+### Additive Models
+
+The sparse additive `HierBasis` framework was original envisaged to be particularly well-suited to additive modelling. For this reason we now consider the (potentially nonlinear) relationship
+$$
+  y_i = \sum^p_{j = 1} f_j(x_{ij}) + \epsilon_i,
+$$
+
+as defined in the introduction, and with $\epsilon_i$ defined analogously to the linear case (with $\text{SNR} = 3$). For our simulation we consider the additive relationship
+$$
+  y_i = 2 + 5f_1(x_{i1}) + 3f_2(x_{i2}) + 4f_3(x_{i3}) + 6f_4(x_{i4}) + \epsilon_i,
+$$
+
+such that
+\begin{align*}
+  f_1(x) &= x \\
+  f_2(x) &= (2x - 1)^2 \\
+  f_3(x) &= \frac{2 \sin(2\pi x)}{2 - \sin(2\pi x)} \\
+  f_4(x) &= 0.1 \sin(2\pi x) + 0.2 \cos(2\pi x) + 0.3 \sin^2(2\pi x) + 0.4 \cos^3(2\pi x) + 0.5 \sin^3(2\pi x).
+\end{align*}
+
+We generate our features ${\bm x}_i \stackrel{\text{iid}}{\sim} \mathcal N_p(0, 1)$ from i.i.d. standard normal deviates with $n$ and $p$ set immediately below.
+```{r}
+#===== data parameters =====#
+set.seed(680)
+n <- 1000 # number of observations
+p <- 9 # number of predictors (excluding intercept)
+SNR <- 3 # signal to noise ratio
+nbasis <- 10
+
+#===== functions =====#
+f1 <- function(x) x
+f2 <- function(x) (2 * x - 1)^2
+f3 <- function(x) 2 * sin(2 * pi * x)/(2 - sin(2 * pi * x))
+f4 <- function(x) 0.1 * sin(2 * pi * x) + 0.2 * cos(2 * pi * x) + 
+  0.3 * sin(2 * pi * x)^2 + 
+  0.4 * cos(2 * pi * x)^3 + 
+  0.5 * sin(2 * pi * x)^3
+
+#===== generate data =====#
+X <- matrix(rnorm(n * p), ncol = p) # iid normal deviates
+y1 <- 5 * f1(X[, 1])
+y2 <- 3 * f2(X[, 2])
+y3 <- 4 * f3(X[, 3])
+y4 <- 6 * f4(X[, 4])
+ytrue <- 2 + y1 + y2 + y3 + y4
+
+# compute noise dispersion satisfying the SNR ratio
+sigma2 <- sum(ytrue^2)/(n - 1) * 1/SNR 
+eps <- rnorm(n, 0, sqrt(sigma2))
+
+# compute perturbed response
+y <- ytrue + eps
+
+### split data into training and validation sets ###
+X_train <- X[1:(n/2),]
+X_valid <- X[(n/2 + 1):n,]
+y_train <- y[1:(n/2)]
+y_valid <- y[(n/2 + 1):n]
+```
+
+#### Prediction
+
+Once again, we set $K = \texttt{nbasis} = 10$ to be the number of basis features to consider, and perform 10-fold cross-validation over the set of tuning parameters $\lambda$.
+
+```{r}
+#===== fit models =====#
+# lasso
+pt <- proc.time()
+mod.glmnet.cv <- cv.glmnet(x = X_train, y = y_train, alpha = 1)
+proc.time() - pt
+
+# additive hierbasis
+pt <- proc.time()
+mod.ahb.cv <- cv.additivehierbasis(X = X_train, y = y_train, nbasis = nbasis, 
+                                   lambdas = exp(seq(1.5, -3, length.out = 50)))
+proc.time() - pt
+```
+
+```{r, echo = F, fig.align = 'center', fig.height = 4, fig.width = 5}
+plot(mod.glmnet.cv, sub = "glmnet")
+plot(mod.ahb.cv, sub = "HierBasis")
+```
+
+We again use the validation sets to compare estimator performance under both the least testing error, $\lambda_{\text{min}}$, and the one-standard-error rule, $\lambda_{1\text{se}}$, tuning parameters
+```{r}
+### predict validation sets ###
+yhat.glmnet.min <- predict(mod.glmnet.cv, X_valid, s = mod.glmnet.cv$lambda.1se)
+yhat.glmnet.1se <- predict(mod.glmnet.cv, X_valid, s = mod.glmnet.cv$lambda.min)
+yhat.ahb.min <- predict(mod.ahb.cv, X_valid, lam.idx = mod.ahb.cv$lambda.min.idx)
+yhat.ahb.1se <- predict(mod.ahb.cv, X_valid, lam.idx = mod.ahb.cv$lambda.1se.idx)
+
+err.glmnet.min <- yhat.glmnet.min - y_valid
+err.glmnet.1se <- yhat.glmnet.1se - y_valid
+err.ahb.min <- yhat.ahb.min - y_valid
+err.ahb.1se <- yhat.ahb.1se - y_valid
+
+mse.glmnet.min <- mean(err.glmnet.min^2)
+mse.glmnet.min.sd <- sd(err.glmnet.min)
+mse.glmnet.1se <- mean(err.glmnet.1se^2)
+mse.glmnet.1se.sd <- sd(err.glmnet.1se)
+mse.ahb.min <- mean(err.ahb.min^2)
+mse.ahb.min.sd <- sd(err.ahb.min)
+mse.ahb.1se <- mean(err.ahb.1se^2)
+mse.ahb.1se.sd <- sd(err.ahb.1se)
+
+mse <- cbind(
+  c(mse.glmnet.min, mse.glmnet.1se, mse.ahb.min, mse.ahb.1se),
+  c(mse.glmnet.min.sd, mse.glmnet.1se.sd, mse.ahb.min.sd, mse.ahb.1se.sd))
+colnames(mse) <- c("MSE", "MSE.SD")
+rownames(mse) <- c("glmnet.min", "glmnet.1se", "HierBasis.min", "HierBasis.1se")
+round(mse, 2)
+```
+
+Although it may not be immediately obvious from the cross-validaiton figures, the numeric results demonstrate a clear advantage of the `HierBasis` estimator's ability to capture additive relationships in the data (at the cost of computational performance). We may see this comparison more clearly (and rigorously) by performing the above computations a number of times in order to generate a distribution of squared residuals. To this end, we repeat this process $\texttt{nsims} = 100$ times and plot the results below
+```{r, echo = F}
+nsims <- 100
+
+pt <- proc.time()
+sim <- replicate(nsims, {
+  #===== generate data =====#
+  X <- matrix(rnorm(n * p), ncol = p) # iid normal deviates
+  y1 <- 5 * f1(X[, 1])
+  y2 <- 3 * f2(X[, 2])
+  y3 <- 4 * f3(X[, 3])
+  y4 <- 6 * f4(X[, 4])
+  ytrue <- 2 + y1 + y2 + y3 + y4
+  
+  # compute noise dispersion satisfying the SNR ratio
+  sigma2 <- sum(ytrue^2)/(n - 1) * 1/SNR 
+  eps <- rnorm(n, 0, sqrt(sigma2))
+  
+  # compute perturbed response
+  y <- ytrue + eps
+  
+  ### split data into training and validation sets ###
+  X_train <- X[1:(n/2),]
+  X_valid <- X[(n/2 + 1):n,]
+  y_train <- y[1:(n/2)]
+  y_valid <- y[(n/2 + 1):n]
+  
+  #===== fit models =====#
+  # lasso
+  mod.glmnet.cv <- cv.glmnet(x = X_train, y = y_train, alpha = 1)
+  # additive hierbasis
+  mod.ahb.cv <- cv.additivehierbasis(X = X_train, y = y_train, 
+                                     nbasis = nbasis,
+                                     lambdas = exp(seq(1.25, -3, 
+                                                       length.out = 50)))
+  
+  # predict
+  yhat.glmnet.min <- predict(mod.glmnet.cv, X_valid, 
+                             s = mod.glmnet.cv$lambda.1se)
+  yhat.glmnet.1se <- predict(mod.glmnet.cv, X_valid, 
+                             s = mod.glmnet.cv$lambda.min)
+  yhat.ahb.min <- predict(mod.ahb.cv, X_valid, 
+                          lam.idx = mod.ahb.cv$lambda.min.idx)
+  yhat.ahb.1se <- predict(mod.ahb.cv, X_valid, 
+                          lam.idx = mod.ahb.cv$lambda.1se.idx)
+  
+  # compute errors
+  err.glmnet.min <- yhat.glmnet.min - y_valid
+  err.glmnet.1se <- yhat.glmnet.1se - y_valid
+  err.ahb.min <- yhat.ahb.min - y_valid
+  err.ahb.1se <- yhat.ahb.1se - y_valid
+  
+  list("glmnet.min" = err.glmnet.min,
+       "glmnet.1se" = err.glmnet.1se,
+       "ahb.min" = err.ahb.min,
+       "ahb.1se" = err.ahb.1se)
+})
+proc.time() - pt
+```
+
+```{r, echo = F, fig.height = 4, fig.width = 5, fig.align = 'center'}
+glmnet.min <- sapply(sim["glmnet.min",], function(x) mean(x^2))
+glmnet.1se <- sapply(sim["glmnet.1se",], function(x) mean(x^2))
+ahb.min <- sapply(sim["ahb.min",], function(x) mean(x^2))
+ahb.1se <- sapply(sim["ahb.1se",], function(x) mean(x^2))
+
+d.glmnet.min <- density(glmnet.min)
+d.glmnet.1se <- density(glmnet.1se)
+d.ahb.min <- density(ahb.min)
+d.ahb.1se <- density(ahb.1se)
+
+plot(d.glmnet.min, lwd = 2, lty = 'dashed', col = 'gray60',
+     xlim = range(d.glmnet.min$x, d.glmnet.1se$x,
+                  d.ahb.min$x, d.ahb.1se$x),
+     ylim = range(d.glmnet.min$y, d.glmnet.1se$y,
+                  d.ahb.min$y, d.ahb.1se$y),
+     xlab = "Mean-Square Error", main = "MSE Density")
+lines(d.glmnet.1se, lwd = 2, lty = 'dotted', col = 'gray60')
+lines(d.ahb.min, lwd = 2, lty = 'dashed')
+lines(d.ahb.1se, lwd = 2, lty = 'dotted')
+legend("topright", legend = c("gnet.min", "gnet.1se", 
+                              "HB.min", "HB.1se"),
+       lty = c("dashed", "dotted", "dashed", "dotted"),
+       col = c("gray60", "gray60", "black", "black"),
+       bty = "n", lwd = 2)
+```
+
+
+#### Variable Selection
+
+We repeat the figures from the linear model variable selection section for the additive modelling environment. First, we investigate `HierBasis`'s ability to select the correct features from the design matrix via the coefficient plots as a function of $\lambda$ (with $\lambda_{\text{1se}}$ marked by the vertial dotted line)
+```{r, echo = F, fig.align = 'center', fig.height = 3, fig.width = 3.5, fig.show = 'hold'}
+for (j in 1:p) {
+  plot(mod.ahb.cv$model.fit, 
+       pred.idx = j, 
+       plot.type = 'lines', 
+       plot.stat = 'coef')
+  abline(v = mod.ahb.cv$lambda.1se, col = 'gray50', lty = 'dotted')
+  if (j <= 5) {
+    legend("topright", legend = "Active", bty = "n")
+  }
+}
+```
+
 ## Manipulating the Mixing Parameter $\alpha$
 
 ## Manipulating Penalty Weights $w_k$
 
-## Large Data 
+### Polynomial Growth: Manipulating $m$
 
-### $n >> p$
+### Exponential Growth
 
-### $p >> n$
-
+### Logarithmic Growth
 
 
 \newpage
