--- a/doc/references/references.bib
+++ b/doc/references/references.bib
@@ -63,3 +63,14 @@
   pages={45--48},
   year={1962}
 }
+@Article{glmnet,
+    title = {Regularization Paths for Generalized Linear Models via
+      Coordinate Descent},
+    author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2010},
+    volume = {33},
+    number = {1},
+    pages = {1--22},
+    url = {http://www.jstatsoft.org/v33/i01/},
+}
